# veridian-platform

./: .gitignore  CLAUDE.md
.github/: dependabot.yml  renovate.json
analytics/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.config.ts  auth.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
ci/: README.md  check-oss-versions.sh  hub-ci.yml  prospection-ci.yml  status.sh
cms/: .dockerignore  .env.example  .gitignore  .npmrc  CMS-DIDIER-READY-TODO.md  Dockerfile  INLINE-EDIT-TODO.md  README.md  docker-compose.ovh-prod.yml  docker-compose.prod.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mts  vitest.setup.ts
docs/: KONG-RATELIMIT-FIX.md  dokploy-current-state.md  migration-twenty-v22-runbook.md  saas-standards.md  twenty-v2-ai-catalog.json  twenty-v22-dokploy-compose.yml  twenty-v22-standalone-compose.yml  twenty-v22-traefik.yml  workflow-migration-prod.md
grafana/: README.md  SECURITY-AUDIT.md
grafana/cli/: README.md  pyproject.toml
grafana/cli/obs/: __init__.py  cache.py  checks.py  checks_security.py  config.py  fingerprint.py  loki.py  main.py  output.py  pentest.py  pentest_worker.py  prom.py  tempo.py  timeutil.py
grafana/cli/tests/: test_fingerprint.py
hub/: .dockerignore  .env.dev.example  .env.example  .gitignore  .prettierrc.json  CLAUDE.md  Dockerfile  README.md  auth.config.ts  auth.ts  components.json  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+7 more)
(+848 files in other folders)
