[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridian-obs"
version = "0.1.0"
description = "Agent-first CLI pour interroger Grafana Cloud (logs, metrics, traces) — Veridian Platform"
requires-python = ">=3.10"
authors = [{ name = "Robert Brunon", email = "robert.brunon@veridian.site" }]
license = { text = "Proprietary — Veridian" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "python-dateutil>=2.9",
]

[project.scripts]
obs = "obs.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["obs*"]
